	tino_sock_select_loop): added
	(tino_sock_select): updated for new forcepoll directive

2005-10-30    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_get_peername): added (names peer by IP)

	* proc.h: global debugging added

	* debug.h: started with individual debug option for modules

	* str.h (tino_str_printf): added

2005-10-16    <tino@firebird.03.softkill.net>

	* Makefile.proto (Makefile.md5): Now depends on VERSIONFILE, such
	that endless make loops hopefully are no more seen.

2005-10-09    <tino@firebird.03.softkill.net>

	* proc.h (tino_fork_exec): environment option added

2005-09-26    <tino@firebird.03.softkill.net>

	* setuptino.sh: autoguessing project name implemented

2005-09-07    <tino@firebird.03.softkill.net>

	* setuptino.sh: extended to create directory or softlink,
	commandline args are optional (needed if you create files).

2005-09-05    <tino@firebird.03.softkill.net>

	* file.h (tino_file_read_line_x): added

2005-08-22    <tino@firebird.03.softkill.net>

	* Makefile.proto (install): made rule more generic (more easy to
	edit)

2005-08-19    <tino@firebird.03.softkill.net>

	* proc.h: tino_wait_child corrected for socklinger release

2005-08-14    <tino@firebird.03.softkill.net>

	* setuptino.sh (DIET): diet option added, just create directory
	diet

2005-08-08    <tino@firebird.03.softkill.net>

	* crypthash.hh: generic structures and templates: md5 and sha

2005-08-02    <tino@firebird.03.softkill.net>

	* file.h, filetool.h, getopt.h, str.h: now compiles under C++

	* Makefile.awk: added _ and + to the allowed characters, such that
	-lstdc++ can be recognized in STD_LDLIBS

	* Makefile.tino.dist: comment "CXX=diet/tinodiet.sh ++" added

2005-08-01    <tino@firebird.03.softkill.net>

	* Makefile.proto, Makefile.d.proto, Makefile-tino.sh: started to
	support .cc/.hh files.

	* filetool.h (tino_file_filenameptr): added

2005-07-31    <tino@firebird.03.softkill.net>

	* setuptino.sh (TARG): added directory copy capability
